<resources>
    <string name="app_name">Wildbook</string>
    <string-array name="species_array">
        <item name="selectSpeciesString">Select a Species</item>
        <item>Physter macrocephalus</item>
        <item>Balaenoptera musculus</item>
        <item>Megaptera novaengliae</item>
        <item>Balaenoptera acutorostrata</item>
        <item>Balaenoptera physalus</item>
        <item>Stenella attenuata</item>
        <item>Tursiops truncatus</item>
    </string-array>
    <string name="welcomeString">Welcome To Wildbook!</string>
    <string name="reportEncounterString"> Report Encounter </string>
    <string name="uploadPicsString">Upload Encounter(s)</string>
    <string name="signoutString">Sign Out</string>
    <string name="uploadString">Upload</string>
    <string name="discardString">Discard</string>
    <string name="cancelString">Cancel</string>
    <string name="imagePreviewString">Image Preview</string>
    <string name="yesString">Yes</string>
    <string name="noString">No</string>
    <string name="speciesValidationString">Please select a Species</string>
    <string name="imageUploadedString">Image(s) Uploaded!</string>
    <string name="anotherIncidentString">Report another Incident?</string>
    <string name="historyString">Your Contribution</string>
    <string name="wifiString">Wifi Only</string>
    <string name="mobiledataString">Mobile Data</string>
    <string name="mobile_data_wifi_string">Mobile Data and Wifi</string>
    <string name="anyString">Any</string>
    <string name="online">You are online!</string>
    <string name="imagesNotUploaded">Images were not uploaded!!</string>
    <string name="imagesWillBeUploadedShortly"> Images will be uploaded shortly</string>
    <string name="uploading_images">Uploading Images...</string>
    <string name="connectivityLossMessageString">Since you are no longer connected to the internet,
        the selected images will be uploaded automatically once your device connectivity resumes.
        Which type of connection would you prefer for image syncing?
    </string>
    <string name="encounter">EncounterNum</string>
    <string name="offline">You are offline</string>
    <string name="sharedpreferencesFileName">com.example.arjan_test.PREFERENCES_FILE</string>
    <string name="imageloading">Loading Images...</string>
    <string name="encounterdetails">Encounter Details</string>
    <string name="live_encounter">Capture Encounter</string>
    <string name="uploadRequestOnNoNetwork">The images will be uploaded on the availability of appropriate network!</string>
    <string name="server_offline">Unfortunately, you contribution could not be retrieved.\n Please try again after sometime</string>
    <string name="error_title">Something went wrong!</string>
    <string name="sync_error">There was an issue during syncing. Please try again after some time</string>
    <string name="file_not_found_error">The File you were trying to upload could not be found!</string>
    <string name="preferences">Preferences</string>
    <string name="sync">Sync</string>
    <string name="logout">Logout</string>
    <string name="syncpreferences">Sync Preferences</string>
    <string name="noimageselected">No Image(s) selected</string>
    <string name="requestimageselection">Please select atleast ONE image to upload</string>
    <string name="selectallString">Select All</string>
    <string name="unselectallString">Deselect All</string>
    <string name="maxuploadString">Please select upto 10 images only</string>
    <string name="maxuploadHeaderString">Maximum Upload Limit</string>
    <string name="encounterDetailsLabel"><u>Encounter Details</u></string>
    <string name="mobiledatacost">Data charges may apply. Do you agree?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="userdetails">User Details</string>
    <string name="thankyou">Hurray!</string>
    <string name="sync_completed">Upload Sucessfull</string>
    <string name="whatnext">We appreciate your contribution to the Wildbook cause.
        What next? While we process the encounter you posted, you can check out your contributions
        by clicking on the "Your Contibutions" button.
    </string>
    <string name="loadingImages">Loading Images...</string>
    <string name="channel_name">Sync Notifications</string>
    <string name="sync_started">Sync Started!</string>
    <string name="upload_started">Upload Started</string>
    <string name="error">Error</string>
    <string name="channel_description">Notifications pertaining to encounters</string>
    <string name="downloading_images">Downloading Images</string>
    <string name="burstmodeon"> Burst Mode is On and set to capture 3 images</string>
    <string name="burstmodeoff"> Burst Mode is Off</string>
</resources>
