<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibeis.wildbook.wildbook.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeString"
        android:textColor="@color/font"
        android:textSize="19dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RepEnc"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/reportEncounterString"
        app:layout_constraintBottom_toTopOf="@+id/historyBtn"
        app:layout_constraintLeft_toLeftOf="@+id/GallUpload"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/SingOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signoutString"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/syncBtn"
        app:layout_constraintRight_toRightOf="@+id/syncBtn"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/syncBtn" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/font"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/RepEnc"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="42dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/GallUpload"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:layout_marginLeft="-101dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="74dp"
        android:text="@string/uploadPicsString"
        app:layout_constraintBottom_toBottomOf="@+id/historyBtn"
        app:layout_constraintLeft_toLeftOf="@+id/historyBtn"
        app:layout_constraintTop_toTopOf="@+id/RepEnc"
        app:layout_constraintVertical_bias="0.428"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="219dp" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/historyString"
        app:layout_constraintBottom_toTopOf="@+id/SingOut"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/syncBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sync"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
